--- a/style.css
+++ b/style.css
@@ -1,27 +1,34 @@
 * {
     box-sizing: border-box;
   }
-  
+
   body {
     font-family: Arial, sans-serif;
     margin: 0;
+    /* background-color:rgb(221, 238, 255); */
   }
-  
+
+  img {
+    display: block;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
   h1,
   h2 {
     text-align: center;
   }
-  
+
   form {
     max-width: 500px;
     margin: 0 auto;
   }
-  
+
   label {
     display: block;
     margin-bottom: 5px;
   }
-  
+
   input,
   select {
     width: 100%;
@@ -30,12 +37,12 @@
     border-radius: 4px;
     margin-bottom: 10px;
   }
-  
+
   input[type="checkbox"] {
     display: inline-block;
     margin-right: 5px;
   }
-  
+
   button {
     display: block;
     margin: 20px auto 10px;
@@ -49,7 +56,7 @@
     font-weight: bold;
     letter-spacing: 1px;
   }
-  
+
   /* .hidden {
     display: none;
   } */
@@ -64,15 +71,15 @@
     height: 100%;
     text-transform: uppercase;
   }
-    
+
   .low {
     color: green;
   }
-  
+
   .moderate {
     color: orange;
   }
-  
+
   .high {
     color: red;
   }
