--- a/GoalSetting.css
+++ b/GoalSetting.css
@@ -19,6 +19,19 @@ h1 {
   cursor: pointer;
 }
 
+.back-button {
+  display: block;
+  margin: auto;
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+}
+
 #add-goal-btn:hover {
   background-color: #3e8e41;
 }
